crates/swc_ecma_parser/tests/typescript-errors/class/override-in-non-subclass/input.ts.stderr
error: This member cannot have an 'override' modifier because its containing class does not extend another class.
 --> $DIR/tests/typescript-errors/class/override-in-non-subclass/input.ts:2:3
  |
2 |   override t() {}
  |   ^^^^^^^^

error: This member cannot have an 'override' modifier because its containing class does not extend another class.
 --> $DIR/tests/typescript-errors/class/override-in-non-subclass/input.ts:8:7
  |
8 |       override k() {}
  |       ^^^^^^^^

